# arc-piano-hand

./: LICENSE  README.md
Code/: JacobServos.ino  README.md  testServos.ino
Code/fall2021/: JacobServos.ino
Code/fall2022/MIDI-to-code/: README.md  environment.yml  music21_testing.ipynb  parsing_midi_with_mido.ipynb  (+2 more)
Code/fall2023/: FingerState.cpp  FingerStateAllocationAlgorithm.cpp  Layer.cpp  Viterbi.cpp  costFunctions.cpp  main.cpp
Code/spring2022/: move_servos.ino  read_flex_sensors.ino
Code/summer2022/: servoTest.txt
Code/summer2023/: Finger.cpp  FingerStateAllocationAlgorithm.cpp  Hand.cpp  Node.cpp  Note.cpp  Trellis.cpp  Viterbi.cpp  costFunctions.cpp  jsonExporter.cpp
Documentation/: README.md
Models/: Index_Finger_Design.stl  Middle_Finger_Jointed.stl  Palm_Design.stl  base-plate v2 v1 v9.f3d
Models/fall2021/: Hand_Assembly.f3z  Pinky_Finger_Design.stl  Protohand palm v3new.f3d  Rod_Caps.stl
Models/fall2022/: Current Final Hand Assembly.f3z  IndexFingerLeftGear v1.f3d  README.md  ServoPalm November5.f3d  base-plate v2 v1.f3d  base-plate v2.f3d  curved_singular_phalange v1.f3d  ian_use_this_file_1.f3d  ian_use_this_file_2.f3d  index_finger_new v3.f3d
Models/spring2023/: Actuator Securing Plate v1 v3.stl
perception/: MusicXMLChecker.py  README.md  camScannerAuto.py  img2mxl.py
sim/: Base.stl  README.md  Working Sim.wbt  curved_singular_phalange_v1.stl  finger_controller.py
src/code_timeline/fall2023/Algos-code/: CMakeLists.txt  Finger.cpp  Hand.cpp  Main.cpp  Note.cpp  Viterbi.cpp  Viterbi.h  Viterbi_extensible.cpp  Viterbi_old_ignore.cpp  bijective_functions  bijective_functions.cpp  class_hierarchy_template.cpp  finger_state_alloc.cpp  helloworld.cpp  initial-idea.cpp  input_output.cpp  phSpace.h  pianoHandNamespace.h  read_musicxml.cpp  simple_code.cpp  test.cpp  test_case_generator.cpp  xml_parsing.cpp
src/code_timeline/fall2023/Algos-code-old/: CMakeLists.txt  Finger.cpp
src/code_timeline/fall2023/Algos-code/rapidxml_testing/: CMakeLists.txt  hotcrossmasked.musicxml  main.cpp
src/sim/: 2nd_world.wbt  Working Sim.wbt
wiki/: overview.md
(+448 files in other folders)
